# linalg

./: Cargo.toml  README.md
.github/workflows/: build.yaml  ci.yaml  some.yaml  test.yaml
src/: lib.rs  linalg.rs  matrix.rs  matrix_view.rs
src/matrix/: add.rs  mat.rs  mat_view.rs  mod.rs  mul.rs  simd.rs  sub.rs  transpose.rs
tests/: benchmarks.rs  matrix_tests.rs
