[package]
name = "linalg"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
path = "tests/benchmarks.rs"

[dependencies]
aligned-vec = "0.6.1"
crossbeam-utils = "0.8.21"
num = "0.4.3"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.10.0"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
